grid (doesnt work)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <app-calendar-header></app-calendar-header>
-  <h1>Hello World</h1>
+  <app-calendar></app-calendar>
 </body>
 </html>
