login/register forms

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,2 +1,11 @@
-<p>calendar works!</p>
-<app-grid></app-grid>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-10">
+            <h1>callendar grid</h1>
+            <app-grid></app-grid>
+        </div>
+        <div class="col">
+            <h1>upcoming tasks</h1>
+        </div>
+    </div>
+</div>
