--- a/src/app/calendar-header/calendar-header.component.html
+++ b/src/app/calendar-header/calendar-header.component.html
@@ -1,27 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<section>
+    <h1>Angular Router App</h1>
+    <nav>
+        <ul>
+        <li><a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a></li>
+        <li><a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Second Component</a></li>
+        </ul>
+    </nav>
+</section>
 
-    <title>Calendar</title>
-</head>
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1>Calendar</h1>
-                </div>
-                <div class="col">
-                    <h1>Month</h1>
-                </div>
-                <div class="col text-end">
-                    <h2>user</h2>
-                </div>
-            </div>
-        </div>
-
-    </header>
+    
+    
