--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,1 +1,9 @@
-<p>task works!</p>
+<div >
+    <h3>Task Title</h3>
+    <p>Task Description</p>
+    <!-- task tags components -->
+    <p>priority</p>
+    <p>Deadline: xx-xx-xxxx xx:xx</p>
+    <p>Complated:  xx-xx-xxxx xx:xx</p>
+
+</div>
