calculating no of weeks in a month

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-10">
             <h1>callendar grid</h1>
-            <app-grid></app-grid>
+            <app-grid [year]="year" [monthNumber]="month"></app-grid>
         </div>
         <div class="col">
             <h1>upcoming tasks</h1>
