--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,6 +1,47 @@
+<div class="container-fluid">
+    <div class="row ">
+        <div class="d-flex justify-content-center">
+            <div class="col" (click)="getNumberOfWeeks()">
+                <h4>Monday</h4>
+            </div>
+            <div class="col">
+                <h4>Thuesday</h4>
+            </div>
+            <div class="col">
+                <h4>Wednesday</h4>
+            </div>
+            <div class="col">
+                <h4>Thurstday</h4>
+            </div>
+            <div class="col">
+                <h4>Friday</h4>
+            </div>
+            <div class="col">
+                <h4>Saturday</h4>
+            </div>
+            <div class="col">
+                <h4>Sunday</h4>
+            </div>
 
-<hr>
-<app-day [day]="12"></app-day>
+        </div>
+        </div>
+        <div class="row">
+            <hr>
+                
+            <div class="col" >
+                <app-day [day]="12"></app-day>
+                <p>Number of weeks: {{weeks}}</p>
+                <p>{{firstOfMonth.toDateString()}}</p>
+
+            </div>
+
+            <div class="starting-offset"
+            *ngFor="let x of month">
+
+            </div>
+        </div>
+
+</div>
 <br>
 <hr>
 <br>
