Calendar makes sense now

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-10">
-            <h1>callendar grid</h1>
+            <h1 class="text-center">Month</h1>
             <app-grid [year]="year" [monthNumber]="month"></app-grid>
         </div>
         <div class="col">
