--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,7 +1,17 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-10">
-            <h1 class="text-center">Month</h1>
+        <div class="col-10 align-items-center">
+            <div class="row d-inline-flex">
+                <div class="col ">
+                    <mat-icon >chevron_left</mat-icon>
+                    </div>
+                    <div class="col">
+                        <h1 class="text-center">{{getMonth()}}</h1>
+                    </div>
+                    <div class="col">                
+                        <mat-icon (click)="incMonth()">chevron_right</mat-icon>
+                    </div>
+            </div>
             <app-grid [year]="year" [monthNumber]="month"></app-grid>
         </div>
         <div class="col">
