--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -1,7 +1,10 @@
-<div (click)="activateTaks()" class="day-box">
-    <p>{{state}}</p>
-    <div *ngIf="status">
-        <app-task></app-task>
+<div class="container-fluid mx-0 px-0 ">
+    <div (click)="activateTaks()" class="day-box">
+        <!-- <p>{{state}}</p> -->
+        <div *ngIf="status">
+            <app-task></app-task>
+        </div>
+        <div class="text-end">{{day.day}}</div>
     </div>
-    <div class="text-end">{{day.day}}</div>
+
 </div>
