--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -3,9 +3,9 @@
         <div class="col-10 align-items-center">
             <div class="row d-inline-flex">
                 <div class="col ">
-                    <mat-icon >chevron_left</mat-icon>
+                    <mat-icon (click)="decMonth()">chevron_left</mat-icon>
                     </div>
-                    <div class="col">
+                    <div class="col "> 
                         <h1 class="text-center">{{getMonth()}}</h1>
                     </div>
                     <div class="col">                
