--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -4,6 +4,6 @@
     <!-- task tags components -->
     <p>{{task.priority}}</p>
     <p>Deadline: {{task.deadline.toDateString()}}</p>
-    <p>Complated:  {{task.completeDate.toDateString()}}</p>
-    <p>Created At: {{task.createdAt.toDateString()}}</p>
+    <p>Complated:  {{task.completeDate?.toDateString()}}</p>
+    <p>Created At: {{task.createdAt?.toDateString()}}</p>
 </div>
