--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,19 +1,24 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-10 align-items-center">
-            <div class="row justify-content-md-center">
-                <div class="col-md-auto">
-                    <mat-icon (click)="decMonth()"
-                        class="chevron">chevron_left</mat-icon>
+            <div class="row">
+                <div class="col-2 text-left">
                 </div>
-                <div class="col-md-auto">
-                    <h1 class="text-center">{{getMonth().toUpperCase()}}</h1>
+                <div class="col-8">
+                    <div
+                        class="d-flex justify-content-center align-items-center">
+                        <mat-icon (click)="decMonth()"
+                            class="chevron">chevron_left</mat-icon>
+                        <div style="font-size:xx-large;">{{getMonth().toUpperCase()}}</div>
+                        <mat-icon (click)="incMonth()"
+                            class="chevron">chevron_right</mat-icon>
+                    </div>
                 </div>
-                <div class="col-md-auto">
-                    <mat-icon (click)="incMonth()"
-                        class="chevron">chevron_right</mat-icon>
+                <div class="col-2 text-left">
+                    <div style="font-size: xx-large; padding-left: 195px;"><b>{{year}}</b></div>
                 </div>
             </div>
+            <hr>
             <app-grid [year]="year" [monthNumber]="month"></app-grid>
         </div>
         <div class="col">
