--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -1,12 +1,19 @@
-<div class="container-fluid mx-0 px-0" [class.bg-secondary]="isHovering"
-    [ngStyle]="{'border-radius': isHovering ? '5px' : '0', 'color': isHovering ? 'white' : 'initial'}"
-    style="margin-top: -10px; margin-bottom: 5px;">
+<div class="container-fluid mx-0 px-0 border border-secondary rounded"
+    [class.bg-secondary]="isHovering && isInViewedMonth"
+    [class.bg-light]="!isHovering && isInViewedMonth"
+    [class.text-white]="isHovering && isInViewedMonth"
+    [class.text-muted]="!isInViewedMonth && !isHovering"
+    [class.bg-dark-subtle]="!isInViewedMonth && !isHovering"
+    [class.bg-body-secondary]="isHovering && !isInViewedMonth"
+    [ngStyle]="{'border-radius': isHovering ? '5px' : '0'}"
+    style="margin-top: 5px; margin-bottom: 5px;">
     <div (click)="activateTask()" class="day-box">
         <!-- <p>{{state}}</p> -->
         <div *ngIf="status">
             <app-task></app-task>
         </div>
-        <div *ngFor="let task of tasks" style="padding-left: 5px; padding-top: 3px;">
+        <div *ngFor="let task of tasks"
+            style="padding-left: 5px; padding-top: 3px;">
             <span class="badge rounded-pill bg-primary">Task</span>
         </div>
         <div class="text-end"
