--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,5 @@
 <main>
-  <!-- Image and text -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Calendar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNav" aria-controls="navbarNav"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav ">
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/register">Register</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<app-calendar-header></app-calendar-header>  
 </main>
 <br>
 <section>
