--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,33 +2,34 @@
     <div class="row justify-content-center">
         <div class="col-5">
             <h1>Log In</h1>
-            <form>
+            <form #form="ngForm" (ngSubmit)="onSubmit(form)">
                 <div class="mb-3">
-                    <label for="" class="form-label">Email</label>
+                    <label for="email" class="form-label">Email</label>
                     <input
                         type="email"
                         class="form-control"
-                        name=""
-                        id=""
+                        name="email"
+                        id="email"
                         aria-describedby="emailHelpId"
                         placeholder="example@mail.com"
-                    />
-                    <!-- <small id="emailHelpId" class="form-text text-muted"
-                        >Help text</small
-                    > -->
+                        ngModel
+                        required />
                     <div class="my-3"></div>
                     <div class="mb-3">
-                        <label for="" class="form-label">Password</label>
+                        <label for="password"
+                            class="form-label">Password</label>
                         <input
                             type="password"
                             class="form-control"
-                            name=""
-                            id=""
-                            placeholder=""
-                        />
+                            name="password"
+                            id="password"
+                            placeholder="Enter your password"
+                            ngModel
+                            required />
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-primary px-4">Log In</button>
+                        <button type="submit" class="btn btn-primary px-4"
+                            [disabled]="!form.valid">Log In</button>
                     </div>
                 </div>
             </form>
