--- a/src/app/calendar-header/calendar-header.component.html
+++ b/src/app/calendar-header/calendar-header.component.html
@@ -1,12 +1,30 @@
-<section>
-    <h1>Angular Router App</h1>
-    <nav>
-        <ul>
-        <li><a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a></li>
-        <li><a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Second Component</a></li>
-        </ul>
-    </nav>
-</section>
-
-    
-    
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Calendar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end"
+            id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item" *ngIf="!isLoggedIn()">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item" *ngIf="!isLoggedIn()">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+                <li class="nav-item" *ngIf="isLoggedIn()">
+                    <span class="nav-link">Logged as
+                        <b>{{this.authService.getEmailFromStorage()}}</b>
+                    </span>
+                </li>
+                <li class="nav-item" *ngIf="isLoggedIn()">
+                    <a class="nav-link" href="#"
+                        (click)="this.logout()">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
