--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid mx-0 px-0 border border-secondary rounded"
     [class.bg-secondary]="isHovering && isInViewedMonth"
-    [class.bg-light]="!isHovering && isInViewedMonth"
+    [class.bg-body-tertiary]="!isHovering && isInViewedMonth"
     [class.text-white]="isHovering && isInViewedMonth"
     [class.text-muted]="!isInViewedMonth && !isHovering"
     [class.bg-dark-subtle]="!isInViewedMonth && !isHovering"
