--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -20,8 +20,28 @@
             <hr>
             <app-grid [year]="year" [monthNumber]="month"></app-grid>
         </div>
-        <div class="col">
-            <h1>upcoming tasks</h1>
+        <div class="col align-items-center">
+            <div style="text-align: center;">
+                <h1 style="text-align: center;">UPCOMING TASKS</h1>
+
+                <input type="radio" class="btn-check" name="options-base"
+                    id="nextWeeks" [(ngModel)]="selectedOption"
+                    value="nextWeeks" autocomplete="off" checked>
+                <label class="btn" for="nextWeeks">Next weeks</label>
+
+                <input type="radio" class="btn-check" name="options-base"
+                    id="currentMonth" [(ngModel)]="selectedOption"
+                    value="currentMonth" autocomplete="off">
+                <label class="btn" for="currentMonth">Current month</label>
+
+                <hr>
+                <div *ngIf="selectedOption === 'nextWeeks'">
+                    <app-weeks-task-list></app-weeks-task-list>
+                </div>
+                <div *ngIf="selectedOption === 'currentMonth'">
+                    <app-month-task-list></app-month-task-list>
+                </div>
+            </div>
         </div>
     </div>
 </div>
