--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -25,7 +25,21 @@
             </div>
         </div>
         <div class="text-end"
-            style="padding-right: 6px; padding-bottom: 4px; font-size: large;">{{day.day}}
+            style="padding-right: 6px; padding-bottom: 4px; font-size: large;">
+            <div *ngIf="!isHovering">{{day.day}}</div>
+            <div *ngIf="isHovering">
+                <button class="btn bg-transparent" style="padding: 0px;">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        width="23" height="23" fill="currentColor"
+                        class="bi bi-plus-circle" viewBox="0 0 16 16"
+                        [ngStyle]="{'color': (this.themeService.isLightTheme() && this.isInViewedMonth) ? 'white' : null}">
+                        <path
+                            d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                        <path
+                            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
+                    </svg>
+                </button>
+            </div>
         </div>
     </div>
 </div>
