--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -1,11 +1,20 @@
 .task-box {
-    background-color: rgba(250, 10, 190, 1);
-    border: solid 2px #000000;
-    border-radius: 10px;
-    padding: 20px;
+    /* background-color: rgba(250, 10, 190, 1); */
+    /* border: solid 2px #000000; */
+    /* border-radius: 10px; */
+    padding: 1px;
     position: relative;
     z-index: 9999;
     cursor: pointer;
+    outline: solid 2px rgba(255, 0, 0, 1);
     /* display: inline-block;
  left: 150px; */
+}
+
+.card-body {
+    padding: 7px;
+}
+
+.card-text {
+    margin-bottom: 7px;
 }
