--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -28,7 +28,8 @@
             style="padding-right: 6px; padding-bottom: 4px; font-size: large;">
             <div *ngIf="!isHovering">{{day.day}}</div>
             <div *ngIf="isHovering">
-                <button class="btn bg-transparent" style="padding: 0px;">
+                <button class="btn bg-transparent" style="padding: 0px;"
+                (click)="this.showAddTask=true">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         width="23" height="23" fill="currentColor"
                         class="bi bi-plus-circle" viewBox="0 0 16 16"
@@ -43,3 +44,4 @@
         </div>
     </div>
 </div>
+<app-add-task [date]="day.date" *ngIf="this.showAddTask" (modalClosed)="this.showAddTask=false"></app-add-task>
