--- a/src/app/day/day.component.css
+++ b/src/app/day/day.component.css
@@ -4,3 +4,11 @@
     justify-content: space-between;
     height: 150px;
 }
+
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    width: 100%;
+  }
