--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -13,6 +13,9 @@
             <div *ngIf="status">
                 <app-task [task]="currentTask"></app-task>
             </div>
+            <div *ngIf="status">
+                <app-event [event]="currentEvent"></app-event>
+            </div>
             <div *ngIf="!status" style="display: flex;">
                 <!-- tasks -->
                 <!-- there is a problem with dispalying all the tasks, if there are too many, they are not displayed -->
@@ -22,34 +25,34 @@
                         style="width: 100%; height: 100%; overflow-y: scroll; padding-right: 17px; box-sizing: content-box;">
                         <div *ngFor="let task of tasks"
                             style="padding-left: 5px; padding-top: 3px;">
-                            <span class="badge rounded-pill bg-primary"
+                            <span class="badge rounded-pill bg-primary truncate"
                                 (click)="setCurrentTask(task)"
                                 style="cursor: pointer">
-                                {{(task.name.length > 14) ? (task.name |
-                                slice:0:13) + '...' : task.name}}
+                                {{task.name}}
                             </span>
                         </div>
                     </div>
                 </div>
                 <!-- events -->
-                <!-- <div
+                <div
                     style="width: 50%; height: 125px; overflow: hidden; position: relative;">
                     <div
                         style="width: 100%; height: 100%; overflow-y: scroll; padding-right: 17px; box-sizing: content-box;">
-                        <div *ngFor="let task of tasks"
+                        <div *ngFor="let event of events"
                             style="padding-left: 5px; padding-top: 3px;">
-                            <span class="badge rounded-pill bg-primary"
-                                (click)="setCurrentTask(task)"
-                                style="cursor: pointer">
-                                {{(task.name.length > 14) ? (task.name |
-                                slice:0:13) + '...' : task.name}}
+                            <span class="badge rounded-pill truncate"
+                                [class.bg-primary]="!event.color"
+                                [ngStyle]="{'background-color': event.color ? event.color : 'null'}"
+                                (click)="setCurrentEvent(event)"
+                                style="cursor: pointer;">
+                                {{event.name}}
                             </span>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
-        <div class="text-end"
+        <div class="text-end" *ngIf="!status"
             style="padding-right: 6px; padding-bottom: 4px; font-size: large; display: flexbox;">
             <div *ngIf="!isHovering">{{day.day}}</div>
             <div *ngIf="isHovering">
