--- a/src/app/month-task-list/month-task-list.component.html
+++ b/src/app/month-task-list/month-task-list.component.html
@@ -1,6 +1,6 @@
 <h2 class="bg-secondary rounded-1"
     [ngStyle]="this.themeService.isLightTheme() ? {'color': 'white'} :null">
-    Current month</h2>
+    Selected month</h2>
 <div *ngIf="tasksCurrentMonth.length === 0" class="alert alert-success"
     role="alert">
     Congratulations! <br> The list is empty.
@@ -8,8 +8,7 @@
 
 <div *ngIf="tasksCurrentMonth.length > 0">
     <div *ngFor="let task of tasksCurrentMonth">
-        <!-- <app-task-brief [task]="task"></app-task-brief> -->
+        <app-task-brief [task]="task"></app-task-brief>
     </div>
-    <hr>
 </div>
 <hr>
