--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -73,7 +73,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary"
                     data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save
+                <button type="button" class="btn btn-primary" (click)="save()">Save
                     Event</button>
             </div>
         </div>
