--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -70,7 +70,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary"
           data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save Task</button>
+        <button type="button" class="btn btn-primary" (click)="save()">Save Task</button>
       </div>
     </div>
   </div>
